--- a/FinanceManager/Web.config
+++ b/FinanceManager/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="FinanceManagerContext" providerName="MySql.Data.MySqlClient"
-        connectionString="server=localhost;port=3306;database=mycontext;uid=root;password=S)NG)T#N!"/>
+        connectionString="server=localhost;port=3306;database=financemanager;uid=root;password=S)NG)T#N!"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -76,7 +76,7 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  <entityFramework>
+  <entityFramework codeConfigurationType="MySql.Data.EntityFramework.MySqlEFConfiguration, MySql.Data.EntityFramework">
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework"/>
     <providers>
       <provider invariantName="MySql.Data.MySqlClient"
