--- a/FinanceManager/FinanceManager.csproj
+++ b/FinanceManager/FinanceManager.csproj
@@ -60,6 +60,8 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -159,21 +161,32 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ReportsController.cs" />
     <Compile Include="Controllers\TransactionsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201809290957009_InitialCreate.cs" />
-    <Compile Include="Migrations\201809290957009_InitialCreate.Designer.cs">
-      <DependentUpon>201809290957009_InitialCreate.cs</DependentUpon>
+    <Compile Include="Migrations\201809291311204_InitialCreate.cs" />
+    <Compile Include="Migrations\201809291311204_InitialCreate.Designer.cs">
+      <DependentUpon>201809291311204_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201809291407291_v1.cs" />
+    <Compile Include="Migrations\201809291407291_v1.Designer.cs">
+      <DependentUpon>201809291407291_v1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201809291429573_v1.1.cs" />
+    <Compile Include="Migrations\201809291429573_v1.1.Designer.cs">
+      <DependentUpon>201809291429573_v1.1.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\Helper\CustomMySqlMigrationSqlGenerator.cs" />
-    <Compile Include="Models\Context\TransactionsContext.cs" />
+    <Compile Include="Models\Context\FinanceManagerContext.cs" />
+    <Compile Include="Models\Reports\AccountBalanceReportItem.cs" />
+    <Compile Include="Models\Reports\ExpenditurePerCategoryPerPeriodReportItem.cs" />
     <Compile Include="Models\Transaction\Transaction.cs" />
     <Compile Include="Models\Transaction\TransactionCategory.cs" />
-    <Compile Include="Models\Transaction\TransactionPeriod.cs" />
-    <Compile Include="Models\Transaction\TransactionSource.cs" />
+    <Compile Include="Models\Period\Period.cs" />
+    <Compile Include="Models\Account\Account.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -220,9 +233,12 @@
     <Content Include="Views\Transactions\Edit.cshtml" />
     <Content Include="Views\Transactions\Index.cshtml" />
     <Content Include="Views\Transactions\Create.cshtml" />
+    <Content Include="Views\Reports\AccountBalanceReport.cshtml" />
+    <Content Include="Views\Reports\ExpenditurePerCategoryPerPeriodReport.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Models\Budget\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -238,8 +254,14 @@
     <Content Include="Scripts\jquery-3.3.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201809290957009_InitialCreate.resx">
-      <DependentUpon>201809290957009_InitialCreate.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201809291311204_InitialCreate.resx">
+      <DependentUpon>201809291311204_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201809291407291_v1.resx">
+      <DependentUpon>201809291407291_v1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201809291429573_v1.1.resx">
+      <DependentUpon>201809291429573_v1.1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
