--- a/FinanceManager/FinanceManager.csproj
+++ b/FinanceManager/FinanceManager.csproj
@@ -166,8 +166,10 @@
       <DependentUpon>201810012346194_Initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\Budget\BudgetItem.cs" />
+    <Compile Include="ViewModels\Budget\CreateBudgetItemViewModel.cs" />
     <Compile Include="ViewModels\Budget\BudgetPeriodViewModel.cs" />
     <Compile Include="ViewModels\Budget\BudgetViewViewModel.cs" />
+    <Compile Include="ViewModels\Transactions\CreateTransactionViewModel.cs" />
     <Compile Include="ViewModels\Transactions\TransactionGroupViewModel.cs" />
     <Compile Include="ViewModels\Transactions\TransactionsViewViewModel.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -196,6 +198,8 @@
     <Content Include="Content\bootstrap\bootstrap.css" />
     <Content Include="Content\bootstrap\bootstrap.min.css" />
     <Content Include="Content\datatables.css" />
+    <Content Include="Content\Images\add.png" />
+    <Content Include="Content\Images\icons8-delete-50.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -251,6 +255,8 @@
     <Content Include="Views\Reports\ExpenditurePerCategoryPerPeriodReport.cshtml" />
     <Content Include="Views\Transactions\TransactionsView.cshtml" />
     <Content Include="Views\Budget\BudgetView.cshtml" />
+    <Content Include="Views\Budget\Create.cshtml" />
+    <Content Include="Views\Budget\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
