--- a/FinanceManager/FinanceManager.csproj
+++ b/FinanceManager/FinanceManager.csproj
@@ -262,6 +262,7 @@
     <Content Include="Views\Budget\BudgetView.cshtml" />
     <Content Include="Views\Budget\Create.cshtml" />
     <Content Include="Views\Budget\Delete.cshtml" />
+    <Content Include="Views\Reports\BudgetVsExpenditureView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
