--- a/FinanceManager/Web.config
+++ b/FinanceManager/Web.config
@@ -9,8 +9,13 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="FinanceManagerContext" providerName="MySql.Data.MySqlClient"
-        connectionString="server=localhost;port=3306;database=financemanager;uid=root;password=S)NG)T#N!"/>
+  <!--
+  <add name="FinanceManagerContext" providerName="MySql.Data.MySqlClient"
+        connectionString="server=localhost;port=3306;database=financemanager;uid=root;password=S)NG)T#N!"/>-->
+    <add name="FinanceManagerContext" providerName="System.Data.SqlClient"
+         connectionString="server=dbfinancemanager.database.windows.net;Initial Catalog=FinanceManager;Persist Security Info=False;
+         User ID=fmadministrator;Password=_ufE/GxaUSxE8q;Connection Timeout=60"/>
+
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -24,6 +29,7 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
+    <customErrors mode="Off"/>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -76,7 +82,7 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  <entityFramework codeConfigurationType="MySql.Data.EntityFramework.MySqlEFConfiguration, MySql.Data.EntityFramework">
+  <entityFramework >
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework"/>
     <providers>
       <provider invariantName="MySql.Data.MySqlClient"
@@ -87,9 +93,9 @@
   </entityFramework>
   <system.data>
     <DbProviderFactories>
-      <remove invariant="MySql.Data.MySqlClient" />
+      <!--<remove invariant="MySql.Data.MySqlClient" />
       <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL"
-           type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+           type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />-->
     </DbProviderFactories>
   </system.data>
 </configuration>
