--- a/FinanceManager/Web.config
+++ b/FinanceManager/Web.config
@@ -5,17 +5,14 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-  <!--
+    <!--
   <add name="FinanceManagerContext" providerName="MySql.Data.MySqlClient"
         connectionString="server=localhost;port=3306;database=financemanager;uid=root;password=S)NG)T#N!"/>-->
-    <add name="FinanceManagerContext" providerName="System.Data.SqlClient"
-         connectionString="server=dbfinancemanager.database.windows.net;Initial Catalog=FinanceManager;Persist Security Info=False;
-         User ID=fmadministrator;Password=_ufE/GxaUSxE8q;Connection Timeout=60"/>
-
+    <add name="FinanceManagerContext" providerName="System.Data.SqlClient" connectionString="server=dbfinancemanager.database.windows.net;Initial Catalog=FinanceManager;Persist Security Info=False;          User ID=fmadministrator;Password=_ufE/GxaUSxE8q;Connection Timeout=60" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -29,7 +26,7 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
-    <customErrors mode="Off"/>
+    <customErrors mode="Off" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -65,6 +62,10 @@
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-5.2.4.0" newVersion="5.2.4.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="EntityFramework" publicKeyToken="b77a5c561934e089" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.webServer>
@@ -82,13 +83,10 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  <entityFramework >
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework"/>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
-      <provider invariantName="MySql.Data.MySqlClient"
-          type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.EntityFramework"/>
-      <provider invariantName="System.Data.SqlClient"
-          type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
   <system.data>
