--- a/FinanceManager/FinanceManager.csproj
+++ b/FinanceManager/FinanceManager.csproj
@@ -182,6 +182,10 @@
     <Compile Include="ViewModels\Reports\BudgetVsExpenditureViewModel.cs" />
     <Compile Include="ViewModels\Reports\BudgetVsExpenditureViewModelItem.cs" />
     <Compile Include="ViewModels\Reports\BudgetVsExpenditureViewViewModel.cs" />
+    <Compile Include="ViewModels\Reports\SavingsReport\SavingsReportBudgetItemViewModel.cs" />
+    <Compile Include="ViewModels\Reports\SavingsReport\SavingsReportTransactionViewModel.cs" />
+    <Compile Include="ViewModels\Reports\SavingsReport\SavingsReportViewModel.cs" />
+    <Compile Include="ViewModels\Reports\SavingsReport\SavingsReportViewModelItem.cs" />
     <Compile Include="ViewModels\Transactions\CreateTransactionViewModel.cs" />
     <Compile Include="ViewModels\Transactions\TransactionGroupViewModel.cs" />
     <Compile Include="ViewModels\Transactions\TransactionsViewViewModel.cs" />
@@ -311,6 +315,7 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
+    <Content Include="Views\Reports\SavingsReport.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
